# second-semester

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  run_tests.sh
.github/workflows/: build-and-lint.yml
DFA/: CMakeLists.txt
DFA/src/: dfa.c  dfa.h  main.c
DFA/test/: test.c
Tests/: test3.csv  test3.txt  test6.csv
avl_tree/: CMakeLists.txt
avl_tree/src/: airports.txt  avl_tree.c  avl_tree.h  main.c
avl_tree/test/: test.c
csv/: CMakeLists.txt
csv/Tests/: test.c  test1.txt  test2.csv  test2.txt  test4.csv  test4.txt  test5.csv  test5.txt  test6.txt
csv/src/: csv_printer.c  csv_printer.h  main.c
graph/: CMakeLists.txt  run_tests.sh
graph/Tests/: test1.txt  test1_res.txt  test2.txt  test2_res.txt  test3.txt  test3_res.txt  test4.txt  test4_res.txt  test5.txt  test5_res.txt
graph/src/: graph.c  graph.h  heap.c  heap.h  readfile.c  readfile.h  states.c
src/: avl_tree.c  avl_tree.h  csv_printer.c  csv_printer.h  main.c  states.c
